# greentic-messaging-providers

./: Cargo.toml  LICENSE  MIGRATION_STATUS.md  README.md  packs.lock.json
.codex/: repo_overview.md
.github/workflows/: build.yml  publish.yml  publish_packs.yml
ci/: local_check.sh
components/secrets-probe/: Cargo.toml  component.manifest.json
components/secrets-probe/src/: bindings.rs  lib.rs
components/secrets-probe/wit/secrets-probe/: world.wit
components/slack/: Cargo.toml  component.manifest.json
components/slack/src/: bindings.rs  lib.rs
components/teams/: Cargo.toml  component.manifest.json
components/teams/src/: bindings.rs  lib.rs
components/telegram/: Cargo.toml  component.manifest.json
components/telegram/src/: bindings.rs  lib.rs
components/webchat/: Cargo.toml  component.manifest.json
components/webchat/src/: bindings.rs  lib.rs
components/webex/: Cargo.toml  component.manifest.json
components/webex/src/: bindings.rs  lib.rs
components/whatsapp/: Cargo.toml  component.manifest.json
components/whatsapp/src/: bindings.rs  lib.rs
crates/messaging-core/: Cargo.toml
crates/messaging-core/src/: lib.rs
crates/provider-common/: Cargo.toml
crates/provider-common/src/: lib.rs
crates/provider-common/tests/: pack_metadata.rs
packs/messaging-provider-bundle/: pack.manifest.json  pack.toml  pack.yaml
packs/messaging-provider-bundle/.packc/: secret-requirements.json
tests/: provider_conformance.rs
tools/: build_components.sh  generate_pack_metadata.py  publish_oci.sh  publish_packs_oci.sh
(+13 files in other folders)
